apps/staging/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - abs.jameshomelab.org
  rules:
    - host: abs.jameshomelab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 3005
